--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -3,6 +3,11 @@
 * {
 	box-sizing: border-box;
 	font-family: "DotGothic16", sans-serif;
+	cursor: url("../../assets/icons/cursor.svg") 10 0, auto;
+}
+
+*:active {
+	cursor: url("../../assets/icons/cursor-pointer.svg") 10 0, pointer;
 }
 
 html,
@@ -19,7 +24,11 @@ body {
 a {
 	color: inherit;
 	text-decoration: underline;
-	cursor: pointer;
+}
+
+a:hover,
+button:hover {
+	cursor: url("../../assets/icons/cursor-pointer.svg") 10 0, pointer;
 }
 
 .loader-view {
@@ -56,7 +65,6 @@ a {
 	background-color: transparent;
 	color: inherit;
 	border-radius: 10px;
-	cursor: pointer;
 	display: none;
 	font-size: 20px;
 	font-weight: bold;
@@ -116,7 +124,6 @@ a {
 	background-color: rgba(0, 0, 0, 0.4);
 	color: inherit;
 	border-radius: 10px;
-	cursor: pointer;
 }
 
 .experience-controls button:hover {
@@ -168,13 +175,27 @@ a {
 	pointer-events: none;
 }
 
-.experience-controls .events {
-	position: fixed;
-	bottom: 30px;
-	right: 30px;
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
+.home-event-button {
+	padding: 10px 20px;
+	border: 2px solid #fff;
+	background-color: rgba(0, 0, 0, 0.4);
+	color: inherit;
+	padding: 0;
+	border-radius: 100%;
+	height: 30px;
+	width: 30px;
+	position: absolute;
+	top: calc(50% - 15px);
+	left: calc(50% - 15px);
+	opacity: 0.3;
+	transition: transform 0.2s, opacity 0.2s;
+	transform: scale(0.7);
+}
+
+.home-event-button:hover {
+	background-color: rgba(0, 0, 0, 0.6);
+	transform: scale(1.05);
+	opacity: 1;
 }
 
 @keyframes spin {
