--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -118,6 +118,11 @@ button:hover {
 	font-size: 16px;
 }
 
+.experience-controls {
+	position: sticky;
+	z-index: 9999 !important;
+}
+
 .experience-controls button {
 	padding: 10px 20px;
 	border: 2px solid #fff;
@@ -175,6 +180,61 @@ button:hover {
 	pointer-events: none;
 }
 
+.chaos-gauge {
+	position: fixed;
+	bottom: 30px;
+	right: 30px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+}
+
+.chaos-gauge .chaos-gauge-icon {
+	width: 60px;
+	height: 60px;
+	background-image: url("../../assets/icons/emoji-smile.svg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+	transform: all 0.3s ease;
+}
+
+.chaos-gauge[data-variant="critical"] .chaos-gauge-icon {
+	background-image: url("../../assets/icons/emoji-cry.svg");
+}
+
+.chaos-gauge[data-variant="warning"] .chaos-gauge-icon {
+	background-image: url("../../assets/icons/emoji-sad.svg");
+}
+
+.chaos-gauge .chaos-gauge-progress {
+	background-color: rgba(0, 0, 0, 0.6);
+	width: 50px;
+	min-height: 200px;
+	height: 30vh;
+	border: 2px solid #fff;
+	border-radius: 10px;
+	display: flex;
+	align-items: flex-end;
+	overflow: hidden;
+}
+
+.chaos-gauge .chaos-gauge-progress-bar {
+	width: 100%;
+	height: 0%;
+	background-color: #fff;
+	transition: all 0.3s ease;
+}
+
+.chaos-gauge[data-variant="critical"] .chaos-gauge-progress-bar {
+	background-color: #e81919;
+}
+
+.chaos-gauge[data-variant="warning"] .chaos-gauge-progress-bar {
+	background-color: #ffc700;
+}
+
 .home-event-button {
 	padding: 10px 20px;
 	border: 2px solid #fff;
@@ -190,12 +250,33 @@ button:hover {
 	opacity: 0.3;
 	transition: transform 0.2s, opacity 0.2s;
 	transform: scale(0.7);
+	z-index: 0;
 }
 
 .home-event-button:hover {
 	background-color: rgba(0, 0, 0, 0.6);
 	transform: scale(1.05);
 	opacity: 1;
+}
+
+.game-over {
+	position: fixed;
+	top: -100dvh;
+	bottom: 0;
+	left: 0;
+	width: 100vw;
+	height: 100dvh;
+	background-color: #000;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
+	text-align: center;
+	display: none;
+}
+
+.game-over .title {
+	font-size: 40px;
 }
 
 @keyframes spin {
