--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -31,6 +31,44 @@ button:hover {
 	cursor: url("../../assets/icons/cursor-pointer.svg") 10 0, pointer;
 }
 
+.volume-controls {
+	position: fixed;
+	top: 50px;
+	right: 30px;
+	z-index: 9999;
+}
+
+.volume-controls button.volume-control {
+	padding: 10px;
+	border: 2px solid #fff;
+	background-color: rgba(0, 0, 0, 0.4);
+	color: inherit;
+	border-radius: 100%;
+	transition: all 0.3s ease;
+}
+
+.volume-controls button.volume-control:hover {
+	background-color: rgba(0, 0, 0, 0.6);
+	transform: scale(1.05);
+}
+
+.volume-controls button.volume-control .icon {
+	width: 30px;
+	height: 30px;
+	background-image: url("../../assets/icons/volume-on.svg");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.volume-controls button.volume-control[data-volume="on"] .icon {
+	background-image: url("../../assets/icons/volume-on.svg");
+}
+
+.volume-controls button.volume-control[data-volume="off"] .icon {
+	background-image: url("../../assets/icons/volume-off.svg");
+}
+
 .loader-view {
 	position: fixed;
 	top: 0;
@@ -310,6 +348,9 @@ button:hover {
 }
 
 @media (max-width: 768px) {
+	.volume-controls {
+		right: 10px;
+	}
 	.loader-view .container {
 		min-width: 80vw;
 	}
@@ -330,10 +371,10 @@ button:hover {
 	.experience-controls .camera {
 		bottom: auto;
 		top: -95vh;
-		left: 20px;
+		left: 10px;
 	}
 	.experience-controls .info {
-		left: 20px;
+		left: 10px;
 		transform: translateX(0%);
 		text-align: left;
 		gap: 10px;
